<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="writeToLogCut"
            android:text="@string/write_to_logcat"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnShowToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/show_toast"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_write_to_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_editview"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_back_to_first_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/back_to_first_fragment"
            android:textSize="30sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>