<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@android:color/holo_blue_light"
    >

    <Button
        android:id="@+id/navToSecActivityFromFragmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/go_to_second_activity_fragment_btn"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/navToThirdActivityFromFragmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/go_to_third_activity_fragment_btn"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/navToMainActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/go_to_main_activity_btn"
        android:textSize="28sp"
        />

</FrameLayout>